--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="/recipes/disaster.html">Recipe for Disaster</a></li>
+        <li><a href="/recipes/success.html">Recipe for Success</a></li>
+    </ul>
 </body>
 </html>
