Add Link to index.html from Recipies

--- a/recipes/disaster.html
+++ b/recipes/disaster.html
@@ -6,6 +6,7 @@
     <title>Disaster Recipe</title>
 </head>
 <body>
-    
+    <h1>Recipe for Disaster</h1>
+    <a href="../index.html">Home</a>
 </body>
 </html>
