--- a/recipes/success.html
+++ b/recipes/success.html
@@ -6,6 +6,7 @@
     <title>Success Recipe</title>
 </head>
 <body>
-    
+    <h1>Recipe for Success</h1>
+    <a href="../index.html">Home</a>
 </body>
 </html>
