Add Resilience Recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/recipes/disaster.html">Recipe for Disaster</a></li>
         <li><a href="/recipes/success.html">Recipe for Success</a></li>
+        <li><a href="/recipes/resilience.html">Recipe for Resilience</a></li>
     </ul>
 </body>
 </html>
