Layout Recipe Content

--- a/recipes/disaster.html
+++ b/recipes/disaster.html
@@ -8,5 +8,22 @@
 <body>
     <h1>Recipe for Disaster</h1>
     <a href="../index.html">Home</a>
+    <hr>
+    <h2>Description</h2>
+    <img src="" alt="">
+    <h3>Servings</h3>
+    <p></p>
+    <h3>Prep time</h3>
+    <p></p>
+    <h3>Cook time</h3>
+    <p></p>
+    <h3>Serving Suggestion</h3>
+    <p></p>
+    <hr>
+    <h2>Ingredients</h2>
+    <ul></ul>
+    <hr>
+    <h2>Steps</h2>
+    <ul></ul>
 </body>
 </html>
