--- a/recipes/success.html
+++ b/recipes/success.html
@@ -10,7 +10,7 @@
     <a href="../index.html">Home</a>
     <hr>
     <h2>Description</h2>
-    <img src="" alt="">
+    <img src="https://freerangestock.com/sample/98555/person-standing-on-top-of-a-mountain.jpg" alt="A Complete Success" height="auto" width="100%">
     <h3>Servings</h3>
     <p></p>
     <h3>Prep time</h3>
