--- a/recipes/resilience.html
+++ b/recipes/resilience.html
@@ -10,7 +10,7 @@
     <a href="../index.html">Home</a>
     <hr>
     <h2>Description</h2>
-    <img src="" alt="">
+    <img src="https://images.pexels.com/photos/5501921/pexels-photo-5501921.jpeg" alt="A Display of Resilience" height="auto" width="100%">
     <h3>Servings</h3>
     <p></p>
     <h3>Prep time</h3>
