Write Disaster Recipe

--- a/recipes/disaster.html
+++ b/recipes/disaster.html
@@ -12,18 +12,35 @@
     <h2>Description</h2>
     <img src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTExL2ZsNTA2MjIyMTgwODgtaW1hZ2UuanBn.jpg" alt="A Complete Disaster" height="auto" width="100%">
     <h3>Servings</h3>
-    <p></p>
+    <p>Way more than intended</p>
     <h3>Prep time</h3>
-    <p></p>
+    <p>Alarmingly short</p>
     <h3>Cook time</h3>
-    <p></p>
+    <p>Instant explosion or slow-burn meltdown</p>
     <h3>Serving Suggestion</h3>
-    <p></p>
+    <p>Serve cold, with regret on the side. Usually followed by cleanup and hard lessons.</p>
     <hr>
     <h2>Ingredients</h2>
-    <ul></ul>
+    <ul>
+        <li>1 overflowing cup of <strong>poor communication</strong></li>
+        <li>3 tablespoons of <strong>unchecked ego</strong></li>
+        <li>1/2 cup of <strong>rushed decisions</strong></li>
+        <li>A generous drizzle of <strong>assumptions</strong></li>
+        <li>1 stick of <strong>bad timing</strong></li>
+        <li>A handful of <strong>ignored red flags</strong></li>
+        <li>2 teaspoons of <strong>denial</strong></li>
+        <li>A pinch (or fistful) of <strong>chaotic energy</strong></li>
+        <li>Optional: <strong>overconfidence</strong>, <strong>mercury in retrograde</strong></li>
+    </ul>
     <hr>
     <h2>Steps</h2>
-    <ol></ol>
+    <ol>
+        <li><strong>Preheat environment to high tension.</strong> The hotter, the better.</li>
+        <li><strong>Mix poor communication and ego</strong> in a large bowl of misunderstanding. Stir until things start getting personal.</li>
+        <li><strong>Add rushed decisions and assumptions</strong> all at once—don’t bother checking the measurements.</li>
+        <li><strong>Toss in bad timing</strong> and <strong>ignored red flags.</strong> Do not sift.</li>
+        <li><strong>Season with denial.</strong> Trust us: the more you add, the more dramatic the final result.</li>
+        <li><strong>Bake until relationships are crispy and plans are scorched.</strong> Timing will vary depending on emotional volatility.</li>
+    </ol>
 </body>
 </html>
