Write Success Recipe

--- a/recipes/success.html
+++ b/recipes/success.html
@@ -12,18 +12,36 @@
     <h2>Description</h2>
     <img src="https://freerangestock.com/sample/98555/person-standing-on-top-of-a-mountain.jpg" alt="A Complete Success" height="auto" width="100%">
     <h3>Servings</h3>
-    <p></p>
+    <p>As many as you're willing to make</p>
     <h3>Prep time</h3>
-    <p></p>
+    <p>Ongoing</p>
     <h3>Cook time</h3>
-    <p></p>
+    <p>Variable - requires patience</p>
     <h3>Serving Suggestion</h3>
-    <p></p>
+    <p>Best enjoyed with humility, gratitude, and willingness to go back for seconds (or start over).</p>
     <hr>
     <h2>Ingredients</h2>
-    <ul></ul>
+    <ul>
+        <li>1 solid foundation of <strong>clear goals</strong></li>
+        <li>2 cups of <strong>consistent effort</strong></li>
+        <li>1/2 cup of <strong>self-awareness</strong></li>
+        <li>3 tablespoons of <strong>adaptability</strong></li>
+        <li>1 scoop of <strong>passion</strong></li>
+        <li>1/4 cup of <strong>failure</strong> (yes, it's essential)</li>
+        <li>A sprinkle of <strong>luck</strong></li>
+        <li>A handful of <strong>supportive people</strong></li>
+        <li>Optional: <strong>mentorship</strong>, <strong>coffee-fueled ambition</strong></li>
+    </ul>
     <hr>
     <h2>Steps</h2>
-    <ol></ol>
+    <ol>
+        <li><strong>Start with clear goals</strong> and lay them out evenly across your workspace.</li>
+        <li><strong>Slowly add consistent effort,</strong> stirring daily—even when motivation runs low.</li>
+        <li><strong>Fold in self-awareness and adaptability.</strong> These will help your mixture adjust as conditions change.</li>
+        <li><strong>Add passion</strong> for flavor and longevity. Don’t let it burn—keep it on a low, steady heat.</li>
+        <li><strong>Mix in failure</strong> — don’t skip this! It adds depth and texture.</li>
+        <li><strong>Top with a sprinkle of luck</strong> and a good dose of community or mentorship.</li>
+        <li><strong>Let rise.</strong> Success takes time. Don’t open the oven too early.</li>
+    </ol>
 </body>
 </html>
