Write Resilience Recipe

--- a/recipes/resilience.html
+++ b/recipes/resilience.html
@@ -12,18 +12,37 @@
     <h2>Description</h2>
     <img src="https://images.pexels.com/photos/5501921/pexels-photo-5501921.jpeg" alt="A Display of Resilience" height="auto" width="100%">
     <h3>Servings</h3>
-    <p></p>
+    <p>Infinite</p>
     <h3>Prep time</h3>
-    <p></p>
+    <p>A lifetime</p>
     <h3>Cook time</h3>
-    <p></p>
+    <p>Variable (some pressure required)</p>
     <h3>Serving Suggestion</h3>
-    <p></p>
+    <p>Best served warm, alongside cup of perspective and some rest. Reheats well after setbacks.</p>
     <hr>
     <h2>Ingredients</h2>
-    <ul></ul>
+    <ul>
+        <li>1 heaping cup of <strong>self-compassion</strong></li>
+        <li>2 tablespoons of <strong>grit</strong></li>
+        <li>1/2 cup of <strong>adaptability</strong></li>
+        <li>A dash of <strong>humor</strong></li>
+        <li>3 generous spoonfuls of <strong>perspective</strong></li>
+        <li>1 teaspoon of <strong>vulnerability</strong></li>
+        <li>1 pinch of <strong>stubborn hope</strong></li>
+        <li>A handful of <strong>support from others</strong></li>
+        <li>Optional: <strong>tears</strong>, <strong>coffee</strong>, or <strong>loud music</strong> (use as needed)</li>
+    </ul>
     <hr>
     <h2>Steps</h2>
-    <ol></ol>
+    <ol>
+        <li><strong>Start with self-compassion.</strong> This forms your base. Stir gently but thoroughly—no room for harsh self-talk here.</li>
+        <li><strong>Fold in grit and adaptability.</strong> These are your structure—what helps you bend without breaking.</li>
+        <li><strong>Sprinkle in humor.</strong> Even a little can change the flavor of the toughest moments.</li>
+        <li><strong>Add perspective slowly.</strong> Best when simmered over time. Helps you see beyond the moment.</li>
+        <li><strong>Whisk in vulnerability.</strong> It might feel counterintuitive, but it binds the rest together.</li>
+        <li><strong>Mix in stubborn hope.</strong> Even a small amount can go a long way. Let it rise, even when it doesn’t feel like it will.</li>
+        <li><strong>Garnish with support.</strong> Friends, family, pets, therapists—whatever works. Don't skimp on this step.</li>
+        <li><strong>Let it sit.</strong> Resilience builds over time. Don’t rush it.</li>
+    </ol>
 </body>
 </html>
