--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>(for character development - not food)</p>
     <ul>
         <li><a href="/recipes/disaster.html">Recipe for Disaster</a></li>
         <li><a href="/recipes/success.html">Recipe for Success</a></li>
