--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Odin Recipes</h1>
     <p>(for character development - not food)</p>
     <ul>
-        <li><a href="/recipes/disaster.html">Recipe for Disaster</a></li>
-        <li><a href="/recipes/success.html">Recipe for Success</a></li>
-        <li><a href="/recipes/resilience.html">Recipe for Resilience</a></li>
+        <li><a href="./recipes/disaster.html">Recipe for Disaster</a></li>
+        <li><a href="./recipes/success.html">Recipe for Success</a></li>
+        <li><a href="./recipes/resilience.html">Recipe for Resilience</a></li>
     </ul>
 </body>
 </html>
